--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/rowIcon"
         android:paddingLeft="16dp"
-        android:src="@drawable/ic_action"/>
+        android:src="@drawable/ic_action_giglio_logo"/>
 
     <TextView
         android:layout_width="wrap_content"
