--- a/app/src/main/res/layout/activity_case.xml
+++ b/app/src/main/res/layout/activity_case.xml
@@ -1,7 +1,7 @@
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card="http://schemas.android.com/apk/res-auto"
     android:id="@+id/DrawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,10 +24,16 @@
                 layout="@layout/tool_bar"></include>
         </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
+        <it.gmariotti.cardslib.library.view.CardViewNative
+            android:id="@+id/carddemo"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Le case" />
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginTop="12dp"
+            card:card_layout_resourceID="@layout/native_card_thumbnail_layout"
+            android:layout_gravity="right"
+            />
 
     </LinearLayout>
 
